# tasker

./: .gitignore  CMakeLists.txt  HOW_TO_RUN  compile-pddl-planner.sh  get_pddl_planner.repos  get_pddl_planner.rosinstall  install-deps-pddl-planner.sh  package.xml  setup.cfg  setup.py  test10-same-y.csv
config/: tasks_config.yaml
launch/: control_human.launch  control_human_real.launch  control_human_tasker_setup.launch  harmoniser.launch  harmoniser_real.launch  tiago_harmoniser_gazebo.launch  tiago_harmoniser_gazebo.launch.py  tiago_harmoniser_real.launch  tiago_harmoniser_real_winiar.launch
makehuman/Alice/: alice.dae
makehuman/Female/: female.dae  female_fell.dae  female_sit.dae
makehuman/Female/Female/: female_sit.dae
makehuman/Male/: male_fell.dae  male_sit.dae  male_sit2.dae
makehuman/Male/Male/: male.dae  male_fell.fbx
msg/: CMD.msg  ScheduleParams.msg  ShdlDataStamped.msg  Status.msg  TaskState.msg
scripts/: resolve_problem.py
src/TaskER/: PriorityShdl.py  RequestTable.py  TaskER.py  TaskHarmoniserAgent.py  TaskerLogger.py  ThaPlannerInterface.py  dynamic_agent.py  req_tab_test.py  task_harmoniser_test.py  task_harmoniser_test.py.py  tasker_comm.py  tasks_costs_durations.txt  tha.py
src/TaskER/fsms/: navigation.py
src/TaskER/kb_communication/: db_connection.py  query_kb_state.py  recalc_kb_fun_values.py
src/TaskER/tasks/: idle_tasker.py  move_to_tasker.py
src/taskHarmoniser/: TaskHarmoniser.py  tha.py
src/task_machine/: StateMachine.py
srv/: CallScheduler.srv  CostConditions.srv  LaunchConditions.srv  StartTask.srv  SuspendConditions.srv  TaskRequest.srv
tasker/: TaskER.py  TaskHarmoniserAgent.py  task_harmonizer.py  tasker_comm.py  tha.py
test-plots/: test10-1-3.eps  test10-2-3.eps  test10-3-3.eps  test10-same-y.ods  test10.bag  test10.csv  test11-2.eps  test11.bag  test11.eps
